Virtual mailbox administration

--- a/server/mail/config/vimbadmin/application.ini
+++ b/server/mail/config/vimbadmin/application.ini
@@ -21,9 +21,9 @@
 ; is to verify that you are in fact the person authorised to complete the
 ; installation as well as provide security for cookies and passwords.
 
-securitysalt                       = ""
-resources.auth.oss.rememberme.salt = ""
-defaults.mailbox.password_salt     = ""
+securitysalt                       = "********"
+resources.auth.oss.rememberme.salt = "********"
+defaults.mailbox.password_salt     = "********"
 
 
 
@@ -114,8 +114,8 @@ defaults.list_size.multiplier = 'GB'
 ; Default values for creating mailboxes
 
 ; This sets the uid and gid columns in the mailbox table to the below values
-defaults.mailbox.uid = 2000
-defaults.mailbox.gid = 2000
+defaults.mailbox.uid = vmail
+defaults.mailbox.gid = vmail
 
 
 ; Set the homedir and maildir values in the mailbox table where the
@@ -128,8 +128,8 @@ defaults.mailbox.gid = 2000
 ;
 ; http://wiki2.dovecot.org/VirtualUsers/Home
 
-defaults.mailbox.maildir = "maildir:/srv/vmail/%d/%u/mail:LAYOUT=fs"
-defaults.mailbox.homedir = "/srv/vmail/%d/%u"
+defaults.mailbox.maildir = "maildir:/var/vmail/%d/%u/Maildir:LAYOUT=fs"
+defaults.mailbox.homedir = "/var/vmail/%d/%u"
 
 ;minimum mailbox password length
 defaults.mailbox.min_password_length = 8
@@ -146,7 +146,7 @@ defaults.mailbox.min_password_length = 8
 ;                      scheme specified by XXX. To see available schemes, use 'dovecotpw -l' 
 ;                      or 'doveadm pw -l'
 
-defaults.mailbox.password_scheme = "md5.salted"
+defaults.mailbox.password_scheme = "dovecot:SHA512-CRYPT"
 
 ; The path to (and initial option(s) if necessary) the Dovecot password generator. Typical 
 ; values may be something like:
@@ -181,7 +181,7 @@ binary.path.bzip2_q   = "/bin/bzip2 -q"
 binary.path.bunzip2_q = "/bin/bunzip2 -q"
 binary.path.rm_rf     = "/bin/rm -rf"
 
-archive.path = "/srv/archives"
+archive.path = "/var/vmail/"
 
 
 
@@ -226,23 +226,23 @@ defaults.export_settings.allowed_subnet[] = "192.168."
 server.smtp.enabled = 1
 server.smtp.host    = "mail.%d"
 server.smtp.user    = "%m"
-server.smtp.port    = "465"
-server.smtp.crypt   = "SSL"
+server.smtp.port    = "785"
+server.smtp.crypt   = "TLS"
 
 server.pop3.enabled = 1
-server.pop3.host  = "gpo.%d"
+server.pop3.host  = "mail.%d"
 server.pop3.user  = "%m"
-server.pop3.port  = "995"
-server.pop3.crypt = "SSL"
+server.pop3.port  = "110"
+server.pop3.crypt = "TLS"
 
 server.imap.enabled = 1
-server.imap.host  = "gpo.%d"
+server.imap.host  = "mail.%d"
 server.imap.user  = "%m"
-server.imap.port  = "993"
-server.imap.crypt = "SSL"
+server.imap.port  = "143"
+server.imap.crypt = "TLS"
 
 server.webmail.enabled = 1
-server.webmail.host  = "https://webmail.%d"
+server.webmail.host  = "https://mail.%d"
 server.webmail.user  = "%m"
 
 
@@ -260,7 +260,7 @@ identity.mailer.name   = "ViMbAdmin Autobot"
 identity.mailer.email  = "do-not-reply@example.com"
 
 identity.sitename = "ViMbAdmin"
-identity.siteurl = "https://www.example.com/vimbadmin/"
+identity.siteurl = "https://server.lan/vimbadmin/"
 
 
 ;;
