--- a/server/config-files/etc/dovecot/conf.d/10-auth.conf
+++ b/server/config-files/etc/dovecot/conf.d/10-auth.conf
@@ -45,7 +45,7 @@
 #auth_username_translation =
 
 # Username formatting before it's looked up from databases. You can use
-# the standard variables here, eg. %Lu would lowercase the username, %n would
+# the standard variables here, e.g. %Lu would lowercase the username, %n would
 # drop away the domain if it was given, or "%n-AT-%d" would change the '@' into
 # "-AT-". This translation is done after auth_username_translation changes.
 #auth_username_format = %Lu
@@ -61,7 +61,7 @@
 #auth_anonymous_username = anonymous
 
 # Maximum number of dovecot-auth worker processes. They're used to execute
-# blocking passdb and userdb queries (eg. MySQL and PAM). They're
+# blocking passdb and userdb queries (e.g. MySQL and PAM). They're
 # automatically created and destroyed as needed.
 #auth_worker_max_count = 30
 
