--- a/server/config-files/etc/dovecot/dovecot.conf
+++ b/server/config-files/etc/dovecot/dovecot.conf
@@ -7,7 +7,7 @@
 
 # '#' character and everything after it is treated as comments. Extra spaces
 # and tabs are ignored. If you want to use either of these explicitly, put the
-# value inside quotes, eg.: key = "# char and trailing whitespace  "
+# value inside quotes, e.g.: key = "# char and trailing whitespace  "
 
 # Most (but not all) settings can be overridden by different protocols and/or
 # source/destination IPs by placing the settings inside sections, for example:
@@ -58,7 +58,7 @@ listen = 127.0.0.1,192.0.2.40,::1,2001:db8::40
 
 # Show more verbose process titles (in ps). Currently shows user name and
 # IP address. Useful for seeing who are actually using the IMAP processes
-# (eg. shared mailboxes or if same uid is used for multiple accounts).
+# (e.g. shared mailboxes or if same uid is used for multiple accounts).
 #verbose_proctitle = no
 
 # Should all processes be killed when Dovecot master process shuts down.
