--- a/server/config-files/etc/dovecot/conf.d/10-mail.conf
+++ b/server/config-files/etc/dovecot/conf.d/10-mail.conf
@@ -7,12 +7,12 @@
 # doesn't yet have any mail, so you should explicitly tell Dovecot the full
 # location.
 #
-# If you're using mbox, giving a path to the INBOX file (eg. /var/mail/%u)
+# If you're using mbox, giving a path to the INBOX file (e.g. /var/mail/%u)
 # isn't enough. You'll also need to tell Dovecot where the other mailboxes are
 # kept. This is called the "root mail directory", and it must be the first
 # path given in the mail_location setting.
 #
-# There are a few special variables you can use, eg.:
+# There are a few special variables you can use, e.g.:
 #
 #   %u - username
 #   %n - user part in user@domain, same as %u if there's no domain
@@ -121,7 +121,7 @@ mail_privileged_group = mail
 
 # Allow full filesystem access to clients. There's no access checks other than
 # what the operating system does for the active UID/GID. It works with both
-# maildir and mboxes, allowing you to prefix mailboxes names with eg. /path/
+# maildir and mboxes, allowing you to prefix mailboxes names with e.g. /path/
 # or ~user/.
 #mail_full_filesystem_access = no
 
@@ -193,7 +193,7 @@ first_valid_gid = 130
 
 # Default chroot directory for mail processes. This can be overridden for
 # specific users in user database by giving /./ in user's home directory
-# (eg. /home/./user chroots into /home). Note that usually there is no real
+# (e.g. /home/./user chroots into /home). Note that usually there is no real
 # need to do chrooting, Dovecot doesn't allow users to access files outside
 # their mail directory anyway. If your home directories are prefixed with
 # the chroot directory, append "/." to mail_chroot. <doc/wiki/Chrooting.txt>
