--- a/desktop/config-files/gnupg/gpg-agent.conf
+++ b/desktop/config-files/gnupg/gpg-agent.conf
@@ -1,14 +1,8 @@
 #
-# Options for the GnuPG Agent
-#
+# Options for gpg-agent (GnuPG) 2.2.12
+# 
 # See the 'OPTIONS' section of 'man gpg-agent'
 #
-
-# Program to use for entering passphrases
-pinentry-program /usr/bin/pinentry-gtk-2
-
-# Enable the OpenSSH Agent protocol.
-enable-ssh-support
 
 # Time in seconds, since last use of a GPG key, after which you will be asked to
 # provide your passhprase again.
@@ -29,3 +23,12 @@ default-cache-ttl-ssh 21600 # 6 hours
 # passhprase again, regardless of the time since that SSH key has been used.
 # Default: 7200 (2 hours)
 max-cache-ttl-ssh 86400 # 24 hours
+
+# Use program filename as the PIN entry. The default is installation dependent.
+# With the default configuration the name of the default pinentry is `pinentry';
+# if that file does not exist but a `pinentry-basic' exist the latter is used.
+pinentry-program /usr/bin/pinentry-gnome3
+
+# The OpenSSH Agent protocol is always enabled, but gpg-agent will only set the
+# SSH_AUTH_SOCK variable if this flag is given.
+enable-ssh-support
