Changed default validity of TLS certificates to 397 days.

--- a/ca/config-files/intermed-ca.cnf
+++ b/ca/config-files/intermed-ca.cnf
@@ -29,7 +29,7 @@ database                = $dir/intermed-ca.index
 new_certs_dir           = $dir/newcerts
 certificate             = $dir/intermed-ca.cert.pem
 private_key             = $dir/private/intermed-ca.key.pem
-default_days            = 730 # Two years
+default_days            = 396 # 1 year + 31 days
 crl                     = $dir/crl/intermed-ca.crl
 crl_dir                 = $dir/crl
 crlnumber               = $dir/intermed-ca.crlnum
