--- a/ca/config-files/root-ca.cnf
+++ b/ca/config-files/root-ca.cnf
@@ -22,7 +22,7 @@ database                = $dir/root-ca.index
 new_certs_dir           = $dir/newcerts
 certificate             = $dir/root-ca.cert.pem
 private_key             = $dir/private/root-ca.key.pem
-default_days            = 1826 # Five years
+default_days            = 1826 # 5 years
 crl                     = $dir/root-ca.crl
 crl_dir                 = $dir/crl
 crlnumber               = $dir/root-ca.crlnum
