Re-work of Unbound DNS resolver, using a more modular configuration files approach. Unbound/OpenWrt quirks ecplained.

--- a/desktop/config-files/gnupg/gpg.conf
+++ b/desktop/config-files/gnupg/gpg.conf
@@ -464,7 +464,7 @@ sig-notation issuer-fpr@notations.openpgp.fifthhorseman.net=%g
 # When making a data signature, prompt for an expiration time. If this option is
 # not specified, the expiration time set via --default-sig-expire is used.
 # --no-ask-sig-expire disables this option.
-ask-sig-expire
+#no-ask-sig-expire
 
 # The default expiration time to use for signature expiration. Valid values are
 # "0" for no expiration, a number followed by the letter d (for days), w (for
