More unbound on OpenWrt documentation updates.

--- a/router/files/etc/unbound/unbound.conf
+++ b/router/files/etc/unbound/unbound.conf
@@ -2,7 +2,8 @@
 # Unbound configuration file for OpenWrt.
 #
 # Unbound Version Version 1.11.0 (released 27 July, 2020)
-# Linked libs: pluggable-libevent 2.1.11-stable (it uses epoll), OpenSSL 1.1.1h  22 Sep 2020
+# Linked libs: pluggable-libevent 2.1.11-stable (it uses epoll), 
+#               OpenSSL 1.1.1h  22 Sep 2020
 # Linked modules: dns64 respip validator iterator
 # TCP Fastopen feature available
 #
@@ -12,8 +13,8 @@
 # OpenWrt specific notes:
 #   
 # Files are stored and maintened in /etc/unbound but copied to /var/lib/unbound 
-# at runtine. While subdirectories will NOT be copied.
-#
+# at runtine. While subdirectories of /etc/unbound will NOT be copied.
+# Keep that in mind when including configuration files in Unbonud for OpenWrt.
 
 
 #=============================================
@@ -33,58 +34,6 @@ server:
     # validation. The ordering of the modules is important.You must also set
     # trust-anchors for validation to be useful.
     module-config: "validator iterator"
-
-
-    #----------------------------------------
-    # Runtime Environment Settings
-    #----------------------------------------
-
-    # Fork into background as daemon.
-    # Default: yes
-    #do-daemonize: no # Don't daemonize when run as init.d service
-    
-    # OpenWRT default: "/var/lib/unbound"
-    #chroot: "/var/lib/unbound"
-
-    # if given, user privileges are dropped (after binding port),
-    # and the given username is assumed. Default is user "unbound".
-    # If you give "" no privileges are dropped.
-    # username: "unbound"
-
-    # the working directory. The relative files in this config are
-    # relative to this directory. If you give "" the working directory
-    # is not changed.
-    # OpenWRT default: "/var/lib/unbound"
-    #directory "/var/lib/unbound"
-
-    # the PID file. Can be an absolute path outside of chroot/work dir.
-    # OpenWRT default: "/var/run/unbound.pid"
-    #pidfile: "/var/run/unbound.pid"
-
-    #----------------------------------------
-    # Network Settings
-    #----------------------------------------
-
-    # IPv4, IPv6 addresses to answer queries from.
-    # OpenWrt default: 0.0.0.0, ::0
-    #interface: 0.0.0.0
-    #interface: ::0
-
-    # IPv4, IPv6 addresses to send outgoing queries to authoritative servers
-    # from.
-    # Default: All
-    #outgoing-interface: 0.0.0.0
-    #outgoing-interface: ::0
-
-    # Port to listen for client queries.
-    # Default: 53
-    # port: 53
-
-    # Number of ports to open. This number of file descriptors can be opened per
-    # thread. Must be at least 1. Default depends on compile options. Larger
-    # numbers need extra resources from the operating system. For performance a
-    # very large value is best, use libevent to make this possible.
-    # outgoing-range:
 
     # Permit unbound to open this port or range of ports for use to send
     # queries. A larger number of permitted outgoing ports increases resilience
@@ -146,7 +95,7 @@ server:
     # fallback generated is excessive (probably also for this resolver, consider
     # tuning the outgoing tcp number).
     # Default; 4096
-    edns-buffer-size: 4096
+    #edns-buffer-size: 4096
 
     # Number of bytes size of the message buffers. The default of 65552 bytes is
     # enough for 64 Kb packets, the maximum DNS message size. No message larger
@@ -156,306 +105,27 @@ server:
     # Default: 65552, OpenWrt default: 8192
     msg-buffer-size: 65552
 
-    # Enable IPv4, "yes" or "no".
-    # do-ip4: yes
-
-    # Enable IPv6, "yes" or "no".
-    # do-ip6: yes
-
-    # Enable UDP, "yes" or "no".
-    # do-udp: yes
-
-    # Enable TCP, "yes" or "no".
-    # do-tcp: yes
-
-
-    #----------------------------------------
-    # Logging and Statistics Seetings
-    #----------------------------------------
-
-    # verbosity number, 0 is least verbose. 1 is default.
-    # OpenWrt default: 1
-    #verbosity: 1
-
-    # "" means log to stderr or nowhere when running in background.
-    # Use of this option sets use-syslog to "no".
-    # logfile: ""
-
-    # Send log messages to syslog. Overrides the 'logfile' setting.
-    # Default: yes
-    # use-syslog: yes
-
-    # Print timestamps in logfiles in UTC ASCII-format. Prints epoch in seconds
-    # if set to 'no'.
-    # Default: no
-    # log-time-ascii: no
-
-    # Log all received DNS queries with time, IP, name, type, and class.
-    # log-queries: no
-    #log-queries: no
-
-    # Log all DNS replies with IP address, name, type, class, return code, time
-    # to resolve, from cache and response size.
-    # Default: no
-    #log-replies: no
-
-    # print statistics to the log (for every thread) every N seconds.
-    # Set to "" or 0 to disable. Default is disabled.
-    # statistics-interval: 0
-
-    # enable cumulative statistics, without clearing them after printing.
-    # statistics-cumulative: no
-
-    # enable extended statistics (query types, answer codes, status)
-    # printed from unbound-control. default off, because of speed.
-    # extended-statistics: no
-
-
-    #------------------------------------------
-    # System Resources and Performance Settings
-    #------------------------------------------
-
-    # The number of threads to create to serve clients.
-    # Use 1 for no threading.
-    # OpenWrt default: 1
-    num-threads: 1
-
-    # Number of ports to open. This number of file descriptors can be
-    # opened per thread. Must be at least 1. Default depends on com-
-    # pile options. Larger numbers need extra resources from the oper-
-    # ating system. For performance a very large value is best, use
-    # libevent to make this possible.
-    # OpenWrt default: 60
-    #outgoing-range: 60
-
-    # The number of queries that every thread will service  simultaneously. If
-    # more queries  arrive  that  need servicing, and no queries can be jostled
-    # out (see jostle-timeout), then the queries are dropped. This forces the
-    # client to resend after a timeout; allowing the server time to work on the
-    # existing queries.
-    # Default depends on compile options, 512 or 1024. OpenWrt default: 30
-    num-queries-per-thread: 64
-
-    # If not 0, then set the SO_RCVBUF socket option to get more buffer space on
-    # UDP port 53 incoming queries. So that short spikes on busy servers do not
-    # drop packets (see counter in netstat -su). Otherwise, the number of bytes
-    # to ask for, try "4m" on a busy server. The OS caps it at a maximum, on
-    # linux unbound needs root permission to bypass the limit, or the admin can
-    # use sysctl net.core.rmem_max.
-    # Default is 0 (use system value).
-    #so-rcvbuf: 0
-
-    # If not 0, then set the SO_SNDBUF socket option to get more buffer space on
-    # UDP port 53 outgoing queries. This for very busy servers handles spikes in
-    # answer traffic, otherwise 'send: resource temporarily unavailable' can get
-    # logged, the buffer overrun is also visible by netstat -su. Specify the
-    # number of bytes to ask for, try "4m" on a very busy server. The OS caps it
-    # at a maximum, on linux unbound needs root permission to bypass the limit,
-    # or the admin can use sysctl net.core.wmem_max.
-    # Default is 0 (use system value).
-    #so-sndbuf: 0
-
-    # If yes, then open dedicated listening sockets for incoming queries for
-    # each thread and try to set the SO_REUSEPORT socket option on each socket.
-    # May distribute incoming queries to threads more evenly. Default is no. On
-    # Linux it is supported in  kernels >= 3.9. On other systems, FreeBSD, OSX
-    # it may also work.You can enable it (on any platform and kernel), it then
-    # attempts to open the port and passes the option if it was available at
-    # compile time, if that works it is used, if it fails, it continues silently
-    # (unless verbosity 3) without the option.
-    # Default: no
-    so-reuseport: yes
-
-    # If yes, Unbound rotates RRSet order in response (the random number is
-    # taken from the query ID, for speed and thread safety).
-    # Default: no
-    rrset-roundrobin: yes
-
-    # If yes, Unbound doesn't insert authority/additional sections into response
-    # messages when those sections are not required. This reduces response size
-    # significantly, and may avoid TCP fallback for some responses. This may
-    # cause a slight speedup. The default is no, because the DNS protocol RFCs
-    # mandate these sections, and the additional content could be of use and
-    # save roundtrips for clients.
-    # Default: no
-    minimal-responses: yes
-
-
-    #----------------------------------------
-    # Cache Settings
-    #----------------------------------------
-
-
-    #----------------------------------------
-    # Message Cache Settings
-
-    # Number of bytes size of the message cache. A plain number is in bytes,
-    # append 'k', 'm'  or  'g' for kilobytes, megabytes or gigabytes (1024*1024
-    # bytes in a megabyte).
-    # Default: 4m, OpenWrt default: 100k
-    msg-cache-size:4m
-
-    # Number of slabs in the message cache. Slabs reduce lock contention by
-    # threads. Must be set to a power of 2. Setting (close) to the number of
-    # cpus is a reasonable guess.
-    # OpenWrt default: 1
-    msg-cache-slabs: 1
-
-    # If yes, message cache elements are prefetched before they expire to keep
-    # the cache up to date. Default is no. Turning it on gives about 10 percent
-    # more traffic and load on the machine, but popular items do not expire from
-    # the cache.
-    # Default: no
-    prefetch: yes
-
-    # If enabled, unbound attempts to serve old responses from cache with a TTL
-    # of 0 in the response without waiting for the actual resolution to finish.
-    # The actual resolution answer ends up in the cache later on.
-    # Default: no
-    serve-expired: yes
-
-    #----------------------------------------
-    # Resource Records Cache Settings
-
-    # Number of bytes size of the RRset cache. Default is 4 megabytes. A plain
-    # number is in bytes, append 'k', 'm' or 'g' for kilobytes, megabytes or
-    # gigabytes (1024*1024 bytes in a megabyte).
-    # Default: 4m, OpenWrt default: 100k
-    rrset-cache-size: 4m
-
-    # Number of slabs in the RRset cache. Slabs reduce lock contention by
-    # threads, but fragment memory usage. Must be set to a power of 2.
-    # OpenWrt default: 1
-    rrset-cache-slabs: 1
-
-    # Time to live maximum for RRsets and messages in the cache. If the maximum
-    # kicks in, responses to clients still get decrementing TTLs based on the
-    # original (larger) values. When the internal TTL expires, the cache item has
-    # expired. Can be set lower to force the resolver to query for data often, and
-    # not trust (very large) TTL values.
-    # Default: 86400 (1 day)
-    #cache-max-ttl: 86400
-
-    # Time to live minimum for RRsets and messages in the cache. If the minimum
-    # kicks in, the data is cached for longer than the domain owner intended,
-    # and thus less queries are made to look up the data. Zero makes sure the
-    # data in the cache is as the domain owner intended, higher values,
-    # especially more than an hour or so, can lead to trouble as the data in the
-    # cache does not match up with the actual data any more.
-    # Default: 0
-    cache-min-ttl: 900 # 15 min
-
-    #----------------------------------------
-    # Negative Answers Cache Settings
-
-    # Number of bytes size of the aggressive negative cache. A plain number is
-    # in bytes, append 'k', 'm' or 'g' for kilobytes, megabytes or gigabytes
-    # (1024*1024 bytes in a megabyte).
-    # Default: 1m. OpenWRT default: 10k
-    neg-cache-size: 500k
-
-    # Time to live maximum for negative responses, these have a SOA in
-    # the authority section that is limited in time.
-    # Default: 3600 (1 hour)
-    #cache-max-negative-ttl: 3600
-
-    # Aggressive NSEC uses the DNSSEC NSEC chain to synthesize NXDOMAIN and
-    # other denials, using information from previous NXDOMAINs answers. It
-    # helps to reduce the query rate towards targets that get a very high
-    # nonexistent name lookup rate.
-    # Default: no
-    # Added in unbound 1.7.0
-    #aggressive-nsec: yes
-
-    #----------------------------------------
-    # Infrastructure Cache Settings
-
-    # Number of slabs in the infrastructure cache. Slabs reduce lock contention
-    # by threads. Must be set to a power of 2.
-    # OpenWrt default: 1
-    infra-cache-slabs: 1
-
-    # Time to live in seconds for entries in the host cache. The host cache
-    # contains roundtrip timing, lameness and EDNS support information.
-    # Default: 900.
-    # infra-host-ttl: 900
-
-    # Number of hosts for which information is cached.
-    # Default: 10,000. OpenWrt default: 200
-    infra-cache-numhosts: 2500
-
-    # Time to live in seconds for entries in the host cache. The host cache
-    # contains roundtrip timing, lameness and EDNS support information.
-    # Default: 900.
-    infra-host-ttl: 900
-
-    # Lower limit in milliseconds for dynamic retransmit timeout calculation in
-    # infrastructure cache. Increase this value if using forwarders that need
-    # more time to do recursive name resolution.
-    # Default is 50
-    #infra-cache-min-rtt: 50
-
-    #----------------------------------------
-    # Key Cache Settings
-
-    # Number of bytes size of the key cache. A plain number is in bytes, append
-    # 'k', 'm' or 'g' for kilobytes, megabytes or gigabytes (1024*1024 bytes in
-    # a megabyte).
-    # Default: 4m. OpenWRT default: 100k
-    key-cache-size: 1m
-
-    # Number of slabs in the key cache. Slabs reduce lock contention by threads.
-    # Must be set to a power of 2. Setting (close) to the number of cpus is a
-    # reasonable guess.
-    # OpenWrt default: 1
-    key-cache-slabs: 1
-
-    # If yes, fetch the DNSKEYs earlier in the validation process, when a DS
-    # record is encountered. This lowers the latency of requests. It does use a
-    # little more CPU. Also if the cache is set to 0, it is no use.
-    # Default: no.
-    prefetch-key: yes
-
-
-    #----------------------------------------
-    # Local Host Mode Settings
-    #----------------------------------------
-
-    # Default is disabled. If enabled, then for private address space, the
-    # reverse lookups are no longer filtered. This allows unbound when running
-    # as dns service on a host where it provides service for that host, to put
-    # out all of the queries for the 'lan' upstream. When enabled, only
-    # localhost, 127.0.0.1 reverse and ::1 reverse zones are configured with
-    # default local zones. Disable the option when unbound is running as a
-    # (DHCP-) DNS network resolver for a group of machines, where such lookups
-    # should be filtered (RFC compliance), this also stops potential data
-    # leakage about the local network to the upstream DNS servers.
-    # Default: no
-    #unblock-lan-zones: no
-
-    # Default is disabled. If enabled, then reverse lookups in private address
-    # space are not validated. This is usually required whenever unblock-lan-
-    # zones is used.
-    # Default: no
-    #insecure-lan-zones: no
-
 
 #=============================================
 # Configuration Files to include
 #=============================================
 
-# Include Configuration Settings
+# Local system resources, performance and cache settings
+include: "tuning.conf"
+
+# Root Zone Hint Configuration
+include: "root-hints.conf"
+
+# Common configuration settings
 include: "/etc/unbound/unbound.conf.d/*.conf"
 
-#
-# Local Zones Settings
+# Local zones (private subnets, domains and public keys)
 include: "/etc/unbound/local-zones.d/*.conf"
 
-# Adservers Blacklists
+# Adservers and other blacklists and blocklists
 include: "/etc/unbound/adservers.d/*.conf"
 
-#
-# Forward Zone Settings
+# Root Forward Zone (upstream DNS providers)
 include: "/etc/unbound/upstream-resolvers.d/init7.conf"
 
 # -*- mode: ini; tab-width: 4; indent-tabs-mode: nil -*-
