--- a/server/config-files/etc/unbound/unbound.conf.d/security.conf
+++ b/server/config-files/etc/unbound/unbound.conf.d/security.conf
@@ -144,7 +144,7 @@ server:
     qname-minimisation-strict: no
 
     # Give IPv4 of IPv6 addresses or classless subnets. These are addresses on
-    # your private network, and are not allowed to be returned for public
+    # your private network, and are not allowed to be returned  for  public
     # internet names. Any occurrence of such addresses are removed from DNS
     # answers. Additionally, the DNSSEC validator may mark the answers bogus.
     # This protects against so-called DNS Rebinding, where a user browser is
@@ -190,6 +190,6 @@ server:
     # ::1 and IP4 127.0.0.1/8. If no, then localhost can be used to send queries
     # to.
     # Default: yes
-    #do-not-query-localhost: yes
+    do-not-query-localhost: no # Allow query to local dnsmasq on OpenWRT
 
 # -*- mode: ini; tab-width: 4; indent-tabs-mode: nil -*-
