Further updates, Unbound on server.

--- a/router/files/etc/unbound/local-zones.d/barracudacentral.org.conf
+++ b/router/files/etc/unbound/local-zones.d/barracudacentral.org.conf
@@ -1,49 +1,113 @@
 #=============================================
+# Stub Zones
+#=============================================
+
+# There may be multiple "stub-zone:" clauses. Each with a "name:" and zero or
+# more hostnames or IP addresses. For the stub zone this list of name-servers is
+# used. Class "IN" is assumed. The servers should be authority servers, not
+# recursors; unbound  performs the recursive processing itself for stub
+# zones.
+#
+# The stub zone can be used to configure authoritative data to be used by the
+# resolver that cannot be accessed using the public internet servers. This is
+# useful for company-local data or private zones. Setup an authoritative server
+# on a different host (or different port). Enter a config entry for unbound
+# with "stub-addr: <ip address of host[@port]>". The unbound resolver can then
+# access the data, without referring to the public internet for it.
+#
+# This setup allows DNSSEC signed zones to be served by that authoritative
+# server, in which case a trusted key entry with the public key can be put in
+# config, so that unbound can validate the data and set the "AD" bit on replies
+# for the private zone (authoritative servers do not set the "AD" bit). This
+# setup makes unbound capable of answering queries for the private zone, and can
+# even set the "AD" bit ('authentic'), but the "AA" ('authoritative') bit is not
+# set on these replies.
+#
+# Consider adding "server:" statements for "domain-insecure:" and for "local-
+# zone: name nodefault" for the zone if it is a locally served zone. The
+# insecure clause stops DNSSEC from invalidating the zone. The "local-zone:
+# nodefault"  (or transparent) clause makes the (reverse-) zone bypass unbound's
+# filtering of RFC1918 zones.
+
+
+#----------------------------------------
+# Stub Zone b.barracudacentral.org.
+#----------------------------------------
+
+stub-zone:
+
+    # Name of the stub zone.
+    name: b.barracudacentral.org.
+
+    # This option is by default off. If enabled it performs NS set priming,
+    # which is similar to root hints, where it starts using the list of
+    # nameservers currently published by the zone. Thus, if the hint list is
+    # slightly outdated, the resolver picks up a correct list online.
+    # Default: no
+    stub-prime: yes
+
+    # If enabled, a query is attempted without the stub clause if it fails. The
+    # data could not be retrieved and would have caused SERVFAIL because the
+    # servers are unreachable, instead it is tried without this clause.
+    # Default: no.
+    #stub-first: no
+
+    # Enable or disable whether the queries to this stub use SSL for transport.
+    # Default: no.
+    #stub-ssl-upstream: no
+
+    # Name of stub zone nameserver. Is itself resolved before it isused.
+    stub-host: blacklist-ns-az1.bci.aws.cudaops.com.
+    stub-host: blacklist-ns-az2.bci.aws.cudaops.com.
+    stub-host: blacklist-ns-az3.bci.aws.cudaops.com.
+
+    # IP addresses of stub zone nameservers. Can be IP 4 or IP 6. To use a
+    # non-default port for DNS communication append '@' with the port number.
+
+    # blacklist-ns-az1.bci.aws.cudaops.com
+    stub-addr: 3.13.7.254
+
+    # blacklist-ns-az2.bci.aws.cudaops.com
+    stub-addr: 3.130.175.225
+
+    # blacklist-ns-az3.bci.aws.cudaops.com
+    stub-addr: 52.15.140.229
+
+
+#=============================================
 # Server Settings
 #=============================================
 
 server:
 
+    #----------------------------------------
+    # Private Domains for example.net
+    #----------------------------------------
 
-    #--------------------------------------------
-    #  Local Reverse DNS Zone for 64.235.154.0/24
-    #  154.235.64.in-addr.arpa
-    #--------------------------------------------
+    # Allow this domain, and all its subdomains to contain private addresses.
+    # Give multiple times to allow multiple domain names to contain private
+    # addresses.
+    # Default: none.
+    private-domain: b.barracudacentral.org.
+
+    # Sets domain name to be insecure, DNSSEC chain of trust is ignored towards
+    # the domain name. So a trust anchor above the domain name can not make the
+    # domain secure with a DS record, such a DS record is then ignored. Also
+    # keys from DLV are ignored for the domain. Can be given multiple times to
+    # specify multiple domains that are treated as if unsigned. If you set trust
+    # anchors for the domain they override this setting (and the domain is
+    # secured).
+    #
+    # This can be useful if you want to make sure a trust anchor for external
+    # lookups does not affect an (unsigned) internal domain. A DS record
+    # externally can create validation failures for that internal domain.
+    domain-insecure: b.barracudacentral.org.
 
     # Used to turn off default contents for AS112 zones. The other types also
     # turn off default contents for the zone. The 'nodefault' option has no
     # other effect than turning off default contents for the given zone. Use
     # 'nodefault' if you use exactly that zone, if you want to use a subzone,
     # use 'transparent'.
-    local-zone: "0.154.235.64.in-addr.arpa." transparent
-
-    #------------------------------------------
-    # Local Data for 0.154.235.64.in-addr.arpa.
-    #------------------------------------------
-    local-data-ptr: "64.235.154.38 barracudacentral.org"
-    local-data-ptr: "64.235.154.81 barracudacentral.org"
-
-
-    #----------------------------------------
-    # Local Zone barracudacentral.org
-    #----------------------------------------
-
-    # Configure a local zone. The type determines the answer to give if there is
-    # no match from 'local-data'.
-    #
-    # The types are "deny", "refuse", "static",
-    # "transparent", "redirect", "nodefault", "typetransparent", "inform",
-    # "inform_deny", "always_transparent", "always_refuse", "always_nxdomain".
-    #
-    # Use "local-data:" to enter data into the local zone. Answers for local
-    # zones are authoritative DNS answers. By default the zones are class "IN".
-    local-zone: "barracudacentral.org." typetransparent
-
-    #----------------------------------------
-    # Local Data for barracudacentral.org.
-    #----------------------------------------
-    local-data: "barracudacentral.org.  A  64.235.154.38"
-    local-data: "barracudacentral.org.  A  64.235.154.81"
-
+    local-zone: b.barracudacentral.org. nodefault
 
 # -*- mode: ini; indent-tabs-mode: nil; tab-width: 4; -*-
