--- a/router/files/etc/unbound/unbound.conf.d/dnssec.conf
+++ b/router/files/etc/unbound/unbound.conf.d/dnssec.conf
@@ -24,7 +24,7 @@ server:
     # temporary file, which is necessary to deal with filesystem full events),
     # it must also be inside the chroot (if that is used).
     # Default: "", OpenWrt default: "/var/lib/unbound/root.key"
-    #auto-trust-anchor-file: "root.key"
+    auto-trust-anchor-file: "/var/lib/unbound/root.key"
 
     # Send RFC8145 key tag query after trust anchor priming.
     # Default; yes
