--- a/server/config-files/etc/unbound/unbound.conf.d/dnssec.conf
+++ b/server/config-files/etc/unbound/unbound.conf.d/dnssec.conf
@@ -23,8 +23,8 @@ server:
     # permission to the file, but also to the directory it is in (to create a
     # temporary file, which is necessary to deal with filesystem full events),
     # it must also be inside the chroot (if that is used).
-    # Default: "", OpenWrt default: "/var/lib/unbound/root.key"
-    #auto-trust-anchor-file: "root.key"
+    # Default: "", 
+    auto-trust-anchor-file: "/var/lib/unbound/root.key"
 
     # Send RFC8145 key tag query after trust anchor priming.
     # Default; yes
